# twitch-chat-worker

./: .gitignore  .gitmodules  CMakeLists.txt  ChannelController.cpp  ChannelController.h  ChatMessage.h  Controller.cpp  Controller.h  DBController.cpp  DBController.h  DBStorage.cpp  DBStorage.h  HttpController.cpp  HttpController.h  HttpControllerEvents.h  HttpNotifier.cpp  HttpNotifier.h  IRCController.cpp  IRCController.h  IRCEvents.h  IRCWorker.cpp  IRCWorker.h  IRCtoDBConnector.cpp  IRCtoDBConnector.h  Message.h  MessageProcessor.cpp  MessageProcessor.h  MessagePublisher.h  MessageSenderInterface.h  MessageStorage.cpp  MessageStorage.h  MessageSubscriber.h  Processor.cpp  Processor.h  README.md  So5Helpers.h  StatsCollector.cpp  StatsCollector.h  Storage.cpp  Storage.h  (+2 more)
bot/: BotConfiguration.h  BotEngine.cpp  BotEngine.h  BotEvents.h  BotLogger.h  BotsEnvironment.cpp  BotsEnvironment.h
bot/events/: BotEvent.h  BotMessageEvent.h  BotRequestEvent.h  BotTimerEvent.h
bot/handlers/: BotEventHandler.h  BotMessageEventHandler.h  BotMessageEventHandlerCommand.cpp  BotMessageEventHandlerCommand.h  BotMessageEventHandlerLua.cpp  BotMessageEventHandlerLua.h
bot/lua/: lua.md
common/: BufferStatic.cpp  BufferStatic.h  Clock.h  Config.cpp  Config.h  Exception.cpp  Exception.h  Logger.cpp  Logger.h  LoggerFactory.h  Options.cpp  Options.h  ScopeExec.h  Singleton.h  SysSignal.cpp  SysSignal.h  ThreadName.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  URI.cpp  URI.h  Utils.cpp  Utils.h
common/network/: Selector.cpp  Selector.h  Socket.cpp  Socket.h  TCPListener.cpp  TCPListener.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h
common/tests/: BufferStaticTest.cpp  CMakeLists.txt
config/: app.h.in  app.service.in  config.toml.in  credentials.json  start.sh.in  stop.sh.in
db/: DBConnection.cpp  DBConnection.h  DBConnectionLock.h  DBConnectionPool.cpp  DBConnectionPool.h
db/ch/: CHConnection.cpp  CHConnection.h  CHConnectionPool.cpp  CHConnectionPool.h
db/pg/: PGConnection.cpp  PGConnection.h  PGConnectionPool.cpp  PGConnectionPool.h
http/: CMakeLists.txt  HTTPServerAgent.cpp  HTTPServerAgent.h
http/client/: HTTPClient.cpp  HTTPClient.h  HTTPClientSession.cpp  HTTPClientSession.h  HTTPRequest.h  HTTPRequestFactory.h
http/details/: Details.h  RootCertificates.h
http/server/: HTTPListener.cpp  HTTPListener.h  HTTPRequestHandler.h  HTTPResponseFactory.h  HTTPServer.cpp  HTTPServer.h  HTTPServerCertificate.h  HTTPServerSession.cpp  HTTPServerSession.h  HTTPServerUnit.h  HTTPSession.cpp  HTTPSession.h
irc/: IRCChannelList.cpp  IRCChannelList.h  IRCClient.cpp  IRCClient.h  IRCClientConfig.h  IRCConnectionConfig.h  IRCController.cpp  IRCController.h  IRCEvents.h  IRCHandler.cpp  IRCHandler.h  IRCMessage.h  IRCMessageListener.h  IRCSelector.cpp  IRCSelector.h  IRCSelectorPool.cpp  IRCSelectorPool.h  IRCSession.cpp  IRCSession.h  IRCSessionCallback.h  IRCSessionInterface.h  IRCSessionListener.h  IRCSocket.cpp  IRCSocket.h  IRCStatistic.h  IRCWorker.cpp  IRCWorker.h  IRCWorkerPool.cpp  IRCWorkerPool.h  ircclassflow.md
irc2/: CMakeLists.txt  IRCClient.cpp  IRCClient.h  IRCClientConfig.h  IRCConnectionConfig.h  IRCSelector.cpp  IRCSelector.h  IRCSelectorPool.cpp  IRCSelectorPool.h  IRCSession.cpp  IRCSession.h  IRCSessionCallback.cpp  IRCSessionCallback.h  IRCSessionContext.h  IRCStatistic.h  main.cpp
ircclient/: IRCClient.cpp  IRCClient.h  IRCHandler.cpp  IRCHandler.h  IRCMessage.h  IRCSocket.cpp  IRCSocket.h  IRCWorker.cpp  IRCWorker.h
pg/: PGConnection.cpp  PGConnection.h  PGConnectionPool.cpp  PGConnectionPool.h
pgsql/: PGConnection.cpp  PGConnection.h  PGConnectionPool.cpp  PGConnectionPool.h
